# shaisum

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
aiuth/: __init__.py  shaisum.py
shaisum/: __init__.py  core.py
tests/: test_shaisum.py
