[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shaisum"
version = "1.0.0"
description = "A SHA256-like hash function powered by LLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
{name = "CertifiedSlop", email = "certifiedslop@example.com"}
]
keywords = ["hash", "sha256", "ai", "llm", "vibes", "cryptography"]
classifiers = [
"Development Status :: 4 - Beta",
"Intended Audience :: Developers",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Topic :: Security",
"Topic :: Software Development :: Libraries",
]
dependencies = [
"requests>=2.28.0",
]

[project.optional-dependencies]
ollama = []
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
openrouter = []
dev = [
"pytest>=7.0.0",
"pytest-cov>=4.0.0",
"black>=23.0.0",
"ruff>=0.1.0",
]
all = [
"shaisum[ollama,openai,anthropic,openrouter,dev]",
]

[project.scripts]
shaisum = "shaisum.core:main"

[project.urls]
Homepage = "https://github.com/CertifiedSlop/shaisum"
Repository = "https://github.com/CertifiedSlop/shaisum.git"
Issues = "https://github.com/CertifiedSlop/shaisum/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["shaisum*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
